sys/kms/gstkmssink.h
@@ -60,6 +60,7 @@ struct _GstKMSSink {
 
   /* capabilities */
   gboolean has_prime_import;
+  gboolean has_prime_export;
   gboolean has_async_page_flip;
   gboolean can_scale;
 
